--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <script>
   mapboxgl.accessToken = "pk.eyJ1IjoicmVtbWlhZ2JlYmkiLCJhIjoiY21odHRrYTQzMTk0bjJqcjE1b2xhZ2FraSJ9.nTCz33gX0gQt3T4A6VD0oQ";
 
-  // ---- HIKES (updated coords for Derwent Edge + Kinder Scout) ----
+  // ---- HIKES (Derwent Edge updated again) ----
   const hikes = [
     {
       id: "derwent-edge",
       name: "Derwent Edge",
-      coords: [-1.7417836422316026, 53.40078162833585],
+      coords: [-1.7430286819988188, 53.3999179904953],   // UPDATED AGAIN
       hikeUrl: "https://thelostpeak.co.uk/hikes/derwent-edge",
-      directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.40078162833585,-1.7417836422316026",
+      directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.3999179904953,-1.7430286819988188",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Derwent%20Edge.gpx"
     },
     {
@@ -45,7 +45,7 @@
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Kinder%20Scout%20Hike.gpx"
     }
   ];
-  // ----------------------------------------------------------------
+  // -------------------------------------------------------------
 
   const map = new mapboxgl.Map({
     container: "map",
@@ -56,7 +56,6 @@
 
   map.addControl(new mapboxgl.NavigationControl(), "bottom-right");
 
-  // Helpers
   async function loadGpxAsLine(gpxUrl){
     const res = await fetch(gpxUrl);
     if(!res.ok) throw new Error("GPX fetch failed: " + gpxUrl);
@@ -86,11 +85,10 @@
         }
       });
     }
-    return { sourceId, layerId };
   }
 
   map.on("load", async () => {
-    // Markers + popups
+    // Add markers & popups
     hikes.forEach(h => {
       const popupHtml = `
         <div style="font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; font-size:14px;">
@@ -103,26 +101,24 @@
           </div>
         </div>
       `;
-      const popup = new mapboxgl.Popup({ offset: 25 }).setHTML(popupHtml);
       new mapboxgl.Marker({ color: "#EC2629" })
         .setLngLat(h.coords)
-        .setPopup(popup)
+        .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHtml))
         .addTo(map);
     });
 
-    // Load all GPX routes, add layers, and fit bounds to markers + routes
+    // Fit bounds around markers + GPX routes
     const bounds = new mapboxgl.LngLatBounds();
-    hikes.forEach(h => bounds.extend(h.coords)); // include marker positions
+    hikes.forEach(h => bounds.extend(h.coords));
 
     await Promise.all(hikes.map(async h => {
       if(!h.gpx) return;
       try{
         const line = await loadGpxAsLine(h.gpx);
         addRouteLayer(h.id, line);
-        const coords = line.geometry.coordinates;
-        coords.forEach(c => bounds.extend(c));
+        line.geometry.coordinates.forEach(c => bounds.extend(c));
       }catch(e){
-        console.warn(e.message || e);
+        console.warn(e);
       }
     }));
 
