--- a/index.html
+++ b/index.html
@@ -10,18 +10,32 @@
     html, body { margin:0; height:100% }
     #map { position:absolute; inset:0 }
 
+    /* Popup box (now white) */
     .mapboxgl-popup-content {
-      background: #EC2629 !important;
-      color: white;
+      background: white !important;
+      color: black;
       border-radius: 10px !important;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.4) !important;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.35) !important;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       padding: 12px 14px !important;
       text-align: center;
     }
 
     .mapboxgl-popup-close-button {
-      color: white !important;
+      color: #333 !important;
+    }
+
+    /* Popup arrow now white */
+    .mapboxgl-popup-tip {
+      border-top-color: white !important;
+      border-bottom-color: white !important;
+    }
+
+    .popup-heading {
+      font-weight: 700;
+      font-size: 15px;
+      margin-bottom: 6px;
+      color: #EC2629;
     }
 
     .popup-link {
@@ -30,23 +44,34 @@
       font-weight: 600;
     }
 
-    /* Popup arrow colour */
-    .mapboxgl-popup-tip {
-      border-top-color: #EC2629 !important;
-      border-bottom-color: #EC2629 !important;
+    #resetViewBtn {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      z-index: 10;
+      background: #EC2629;
+      color: white;
+      border: none;
+      padding: 8px 10px;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 <div id="map"></div>
+<button id="resetViewBtn">Reset</button>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
 <script src="https://unpkg.com/@tmcw/togeojson@5.8.0/dist/togeojson.umd.js"></script>
 
 <script>
-  mapboxgl.accessToken = "pk.eyJ1IjoicmVtbWlhZ2JlYmkiLCJhIjoiY21odHRrYTQzMTk0bjJqcjE1b2xhZ2FraSJ9.nTCz33gX0gQt3T4A6VD0oQ";
+  mapboxgl.accessToken =
+    "pk.eyJ1IjoicmVtbWlhZ2JlYmkiLCJhIjoiY21odHRrYTQzMTk0bjJqcjE1b2xhZ2FraSJ9.nTCz33gX0gQt3T4A6VD0oQ";
 
-  const RED  = "#EC2629";
+  const RED = "#EC2629";
   const BLUE = "#3899EC";
 
   const hikes = [
@@ -55,7 +80,8 @@
       name: "Derwent Edge",
       coords: [-1.7427849606990842, 53.400582126300236],
       hikeUrl: "https://thelostpeak.co.uk/hikes/derwent-edge",
-      directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.400582126300236,-1.7427849606990842",
+      directionsUrl:
+        "https://www.google.com/maps/dir/?api=1&destination=53.400582126300236,-1.7427849606990842",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Derwent%20Edge.gpx"
     },
     {
@@ -63,7 +89,8 @@
       name: "The Crashed Plane Hike",
       coords: [-1.8689, 53.4329],
       hikeUrl: "https://thelostpeak.co.uk/hikes/crashed-plane",
-      directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.4329,-1.8689",
+      directionsUrl:
+        "https://www.google.com/maps/dir/?api=1&destination=53.4329,-1.8689",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/The%20Crashed%20Plane%20Hike.gpx"
     },
     {
@@ -71,7 +98,8 @@
       name: "Kinder Scout",
       coords: [-1.8151209383535991, 53.364872107766416],
       hikeUrl: "https://thelostpeak.co.uk/hikes/kinder-scout",
-      directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.364872107766416,-1.8151209383535991",
+      directionsUrl:
+        "https://www.google.com/maps/dir/?api=1&destination=53.364872107766416,-1.8151209383535991",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Kinder%20Scout%20Hike.gpx"
     }
   ];
@@ -92,27 +120,32 @@
   let hoveredId = null;
   let rafToken = null;
 
-  function setMarkerColor(id, color){
+  let activeRouteId = null;
+  let prevView = null;
+  const allBounds = new mapboxgl.LngLatBounds();
+
+  function setMarkerColor(id, color) {
     const el = markerElsById[id];
-    if(!el) return;
-    const svg = el.querySelector('svg');
-    if(svg) svg.style.fill = color;
-    const path = el.querySelector('svg path');
-    if(path) path.setAttribute('fill', color);
+    if (!el) return;
+    const svg = el.querySelector("svg");
+    if (svg) svg.style.fill = color;
+    const path = el.querySelector("svg path");
+    if (path) path.setAttribute("fill", color);
   }
 
-  function setRouteColor(id, color){
+  function setRouteColor(id, color) {
     const lyr = routeLayerId[id];
-    if(lyr && map.getLayer(lyr)){
+    if (lyr && map.getLayer(lyr)) {
       map.setPaintProperty(lyr, "line-color", color);
     }
   }
 
-  function applyHoverState(){
+  function applyHoverState() {
     rafToken = null;
     Object.keys(routeLayerId).forEach(id => setRouteColor(id, RED));
     Object.keys(markerElsById).forEach(id => setMarkerColor(id, RED));
-    if(hoveredId){
+
+    if (hoveredId) {
       setRouteColor(hoveredId, BLUE);
       setMarkerColor(hoveredId, BLUE);
       map.getCanvas().style.cursor = "pointer";
@@ -121,12 +154,38 @@
     }
   }
 
-  function setHovered(idOrNull){
+  function setHovered(idOrNull) {
     hoveredId = idOrNull;
-    if(!rafToken) rafToken = requestAnimationFrame(applyHoverState);
+    if (!rafToken) rafToken = requestAnimationFrame(applyHoverState);
   }
 
-  async function loadGpxAsLine(gpxUrl){
+  function snapshotView() {
+    const c = map.getCenter();
+    prevView = {
+      center: [c.lng, c.lat],
+      zoom: map.getZoom(),
+      bearing: map.getBearing(),
+      pitch: map.getPitch()
+    };
+  }
+
+  function resetView() {
+    if (prevView) {
+      map.easeTo(prevView);
+    } else {
+      map.fitBounds(allBounds, { padding: 40 });
+    }
+    activeRouteId = null;
+  }
+
+  document.getElementById("resetViewBtn").onclick = resetView;
+
+  map.getCanvas().setAttribute("tabindex", "0");
+  map.getCanvas().addEventListener("keydown", e => {
+    if (e.key === "Escape") resetView();
+  });
+
+  async function loadGpxAsLine(gpxUrl) {
     const res = await fetch(gpxUrl);
     const text = await res.text();
     const xml = new DOMParser().parseFromString(text, "application/xml");
@@ -134,15 +193,15 @@
     return gj.features.find(f => f.geometry?.type === "LineString");
   }
 
-  function addRouteLayer(id, lineFeature){
+  function addRouteLayer(id, lineFeature) {
     const sourceId = `route-src-${id}`;
-    const layerId  = `route-lyr-${id}`;
+    const layerId = `route-lyr-${id}`;
 
-    if(!map.getSource(sourceId)){
-      map.addSource(sourceId, { type:"geojson", data: lineFeature });
+    if (!map.getSource(sourceId)) {
+      map.addSource(sourceId, { type: "geojson", data: lineFeature });
     }
 
-    if(!map.getLayer(layerId)){
+    if (!map.getLayer(layerId)) {
       map.addLayer({
         id: layerId,
         type: "line",
@@ -160,12 +219,26 @@
     routeLayerId[id] = layerId;
   }
 
-  map.on("load", async () => {
+  function wireRouteZoom(h, layerId, coords) {
+    const b = new mapboxgl.LngLatBounds();
+    coords.forEach(c => b.extend(c));
 
+    map.on("click", layerId, () => {
+      if (activeRouteId === h.id) {
+        resetView();
+        return;
+      }
+      snapshotView();
+      activeRouteId = h.id;
+      map.fitBounds(b, { padding: 60, maxZoom: 13 });
+    });
+  }
+
+  map.on("load", async () => {
     hikes.forEach(h => {
       const popupHtml = `
         <div>
-          <div style="font-weight:700; font-size:15px; margin-bottom:6px;">${h.name}</div>
+          <div class="popup-heading">${h.name}</div>
           <div><a class="popup-link" href="${h.hikeUrl}" target="_blank">Hike Page</a></div>
           <div style="margin-top:4px;"><a class="popup-link" href="${h.directionsUrl}" target="_blank">Directions</a></div>
         </div>
@@ -183,25 +256,34 @@
 
       el.addEventListener("mouseenter", () => setHovered(h.id));
       el.addEventListener("mouseleave", () => setHovered(null));
-    });
 
-    const bounds = new mapboxgl.LngLatBounds();
-    hikes.forEach(h => bounds.extend(h.coords));
+      /* MOBILE ONLY: tap marker to centre */
+      el.addEventListener("click", () => {
+        if (window.innerWidth < 700) {
+          map.easeTo({ center: h.coords, zoom: map.getZoom() });
+        }
+      });
+
+      allBounds.extend(h.coords);
+    });
 
     await Promise.all(
       hikes.map(async h => {
         const line = await loadGpxAsLine(h.gpx);
         addRouteLayer(h.id, line);
-        line.geometry.coordinates.forEach(c => bounds.extend(c));
+
+        const coords = line.geometry.coordinates;
+        coords.forEach(c => allBounds.extend(c));
+
+        wireRouteZoom(h, `route-lyr-${h.id}`, coords);
 
         map.on("mouseenter", `route-lyr-${h.id}`, () => setHovered(h.id));
         map.on("mouseleave", `route-lyr-${h.id}`, () => setHovered(null));
       })
     );
 
-    map.fitBounds(bounds, { padding: 40 });
+    map.fitBounds(allBounds, { padding: 40 });
   });
-
 </script>
 </body>
 </html>
