--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 
     /* Popup box */
     .mapboxgl-popup-content {
-      background: #fff !important;
-      color: #1E1E1E;
-      border-radius: 12px !important;
-      border: none !important;                 /* prevent hairline seam */
-      box-shadow: 0 10px 24px rgba(0,0,0,0.35) !important; /* extra visible shadow */
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      padding: 12px 14px !important;
-      text-align: center;
-      max-width: 260px;                         /* wrap long titles */
-      width: max-content;
-      word-wrap: break-word;
-    }
+  background: #fff !important;
+  color: #1E1E1E;
+  border-radius: 12px !important;
+  border: 3px solid #EC2629 !important;   /* NEW red border */
+  box-shadow: 0 10px 24px rgba(0,0,0,0.35) !important;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  padding: 12px 14px !important;
+  text-align: center;
+  max-width: 260px;
+  width: max-content;
+  word-wrap: break-word;
+}
+
 
     .mapboxgl-popup-close-button { color: #333 !important; }
 
@@ -235,3 +236,4 @@
 </script>
 </body>
 </html>
+
