--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 
     .mapboxgl-popup-close-button { color: #333 !important; }
 
-    /* Popup arrow (white + overlap to kill seam) */
-    .mapboxgl-popup-tip {
-      border-top-color: #fff !important;
-      border-bottom-color: #fff !important;
-      margin-top: -2px;
-    }
+    /* Popup arrow (now full red) */
+.mapboxgl-popup-tip {
+  border-top-color: #EC2629 !important;
+  border-bottom-color: #EC2629 !important;
+  margin-top: -2px; /* hides seam */
+}
+
 
     .popup-heading {
       font-weight: 800;
@@ -320,3 +321,4 @@
 </script>
 </body>
 </html>
+
