--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Peak District Hikes Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
   <style>
     html, body { margin:0; height:100% }
     #map { position:absolute; inset:0 }
@@ -19,9 +21,9 @@
       border-radius: 12px !important;
       border: 3px solid #EC2629 !important;   /* red border */
       box-shadow: 0 10px 24px rgba(0,0,0,0.35) !important;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif !important;
       padding: 12px 14px !important;
-      text-align: center;
+      text-align: left;                        /* match reference style */
       max-width: 260px;                        /* wrap long titles */
       width: max-content;
       word-wrap: break-word;
@@ -29,21 +31,20 @@
 
     .mapboxgl-popup-close-button { color: #333 !important; }
 
-    /* Popup arrow (now full red) */
-.mapboxgl-popup-tip {
-  border-top-color: #EC2629 !important;
-  border-bottom-color: #EC2629 !important;
-  margin-top: -2px; /* hides seam */
-}
-
+    /* Popup arrow (brand red) + overlap to remove seam */
+    .mapboxgl-popup-tip {
+      border-top-color: #EC2629 !important;
+      border-bottom-color: #EC2629 !important;
+      margin-top: -2px;
+    }
 
     .popup-heading {
-      font-weight: 800;
-      font-size: 16px;
-      line-height: 1.2;
-      margin-bottom: 8px;
+      font-weight: 700;
+      font-size: 15px;       /* slightly smaller */
+      line-height: 1.35;
+      margin-bottom: 6px;
       color: #1E1E1E;
-      text-transform: uppercase;
+      text-transform: none;  /* capitalised, not ALL CAPS */
     }
 
     .popup-link {
@@ -60,35 +61,18 @@
       outline: none !important; box-shadow: none !important;
     }
 
-    /* Specs block styles (match your example) */
+    /* Specs block styles */
     .specs {
       margin-top: 8px;
-      text-align: center;
+      text-align: left;
       font-size: 13px;
     }
-    .spec-row {
-      margin: 6px 0;
-      letter-spacing: 0.2px;
-    }
-    .spec-label {
-      font-weight: 800;
-      color: #1E1E1E;
-      margin-right: 4px;
-      text-transform: uppercase;
-    }
-    .spec-value {
-      font-weight: 800;
-      color: #EC2629; /* red values */
-      text-transform: uppercase;
-    }
-    .stars {
-      display: inline-block;
-      line-height: 1;
-      font-size: 16px;
-      margin-top: 2px;
-    }
-    .star { color: #EC2629; }                      /* filled */
-    .star.off { color: rgba(236,38,41,0.25); }     /* unfilled */
+    .spec-row { margin: 6px 0; letter-spacing: 0.2px; }
+    .spec-label { font-weight: 800; color: #1E1E1E; margin-right: 4px; text-transform: uppercase; }
+    .spec-value { font-weight: 800; color: #EC2629; text-transform: uppercase; }
+    .stars { display: inline-block; line-height: 1; font-size: 16px; margin-top: 2px; }
+    .star { color: #EC2629; }
+    .star.off { color: rgba(236,38,41,0.25); }
   </style>
 </head>
 <body>
@@ -112,7 +96,7 @@
       directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.400582126300236,-1.7427849606990842",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Derwent%20Edge.gpx",
       specs: {
-        duration: "3 - 4 hours",
+        duration: "3 to 4 hours",
         length: "7.4 miles",
         type: "Circular",
         ascent: "367m",
@@ -129,7 +113,7 @@
       directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.4329,-1.8689",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/The%20Crashed%20Plane%20Hike.gpx",
       specs: {
-        duration: "2 - 3 hours",
+        duration: "2 to 3 hours",
         length: "3.6 miles",
         type: "Circular",
         ascent: "145m",
@@ -146,7 +130,7 @@
       directionsUrl: "https://www.google.com/maps/dir/?api=1&destination=53.364872107766416,-1.8151209383535991",
       gpx: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Kinder%20Scout%20Hike.gpx",
       specs: {
-        duration: "4 - 6 hours",
+        duration: "4 to 6 hours",
         length: "8.3 miles",
         type: "Circular",
         ascent: "562m",
@@ -309,7 +293,6 @@
 
         map.on("mouseenter", layerId, () => setHovered(h.id));
         map.on("mouseleave", layerId, () => setHovered(null));
-        // (no click-zoom behaviour)
       }catch(e){
         console.warn(e.message || e);
       }
@@ -321,4 +304,3 @@
 </script>
 </body>
 </html>
-
